# EndtoEnd_ML_API

./: README.md
mlapi/: Dockerfile  README.md  pyproject.toml
mlapi/src/: main.py  sentiment_predict.py
mlapi/tests/: test_mlapi.py
mlapi/trainer/: model_create.py  train.py
